{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 6,
  "lineage": "56330255-eb93-9f50-1fc4-f008f19eb220",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06e78a71af43ef21a",
            "arn": "arn:aws:ec2:us-east-1:548850151147:instance/i-0887c10c333233419",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0887c10c333233419",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b30ee516c86c5a5",
            "private_dns": "ip-172-31-33-155.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.155",
            "public_dns": "ec2-34-229-252-159.compute-1.amazonaws.com",
            "public_ip": "34.229.252.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0993a97e7fd38b3f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sistema-ordem-servico-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0610850d7b2c8b0bb",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sistema-ordem-servico-app-server"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "sistema-ordem-servico-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b57447d30da8cfd"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850151147:security-group/sg-05b57447d30da8cfd",
            "description": "Permite HTTP, HTTPS e SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b57447d30da8cfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Aplicacao (Spring Boot)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sistema-ordem-servico-sg",
            "name_prefix": "",
            "owner_id": "548850151147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sistema-ordem-servico-sg"
            },
            "tags_all": {
              "Name": "sistema-ordem-servico-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d5860d9759e1a17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548850151147:security-group/sg-0dcc1847fd056e747",
            "description": "Permite conexao MySQL na porta 3306 vinda do EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcc1847fd056e747",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL vindo do servidor da aplicacao",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b57447d30da8cfd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sistema-ordem-servico-db-sg",
            "name_prefix": "",
            "owner_id": "548850151147",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sistema-ordem-servico-db-sg"
            },
            "tags_all": {
              "Name": "sistema-ordem-servico-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d5860d9759e1a17"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg"
          ]
        }
      ]
    }
  ]
}